--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,7 +9,7 @@ services:
     image: postgres:9.6
     container_name: postgres-dev
     ports:
-      - '6432:5432'
+      - '5432:5432'
     environment:
       - POSTGRES_USER=postgres
-      - POSTGRES_DB=test
+      - POSTGRES_DB=db
