--- a/package.json
+++ b/package.json
@@ -8,9 +8,9 @@
     "build": "tsc -p tsconfig.build.json",
     "format": "prettier --write \"src/**/*.ts\"",
     "db-start": "docker-compose down && docker-compose up -d",
-    "start": "node dist/server",
-    "start:dev": "concurrently --handle-input \"wait-on dist/main.js && nodemon\" \"tsc -w -p tsconfig.build.json\" ",
-    "start:debug": "nodemon --config nodemon-debug.json",
+    "db-stop": "docker-compose down",
+    "start:dev": "ENV=DEV concurrently --handle-input \"wait-on dist/main.js && nodemon\" \"tsc -w -p tsconfig.build.json\" ",
+    "start:dev:debug": "ENV=DEV nodemon --config nodemon-debug.json",
     "prestart:prod": "rimraf dist && npm run build",
     "start:prod": "node dist/main.js",
     "lint": "tslint -p tsconfig.json -c tslint.json",
@@ -22,17 +22,24 @@
     "test:e2e:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@hapi/joi": "^15.0.3",
     "@nestjs/common": "^6.2.4",
     "@nestjs/core": "^6.0.0",
     "@nestjs/microservices": "^6.2.4",
     "@nestjs/platform-fastify": "^6.2.4",
+    "@nestjs/swagger": "^3.0.2",
+    "@nestjs/typeorm": "^6.1.1",
+    "fastify-swagger": "^2.4.0",
+    "pg": "^7.11.0",
     "reflect-metadata": "^0.1.12",
     "rimraf": "^2.6.2",
-    "rxjs": "^6.3.3"
+    "rxjs": "^6.3.3",
+    "typeorm": "^0.2.17"
   },
   "devDependencies": {
     "@nestjs/testing": "^6.0.0",
     "@types/jest": "^23.3.13",
+    "@types/joi": "^14.3.3",
     "@types/node": "^10.12.18",
     "@types/supertest": "^2.0.7",
     "concurrently": "^4.1.0",
