--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,7 +15,7 @@
     "target": "es6",
     "sourceMap": true,
     "outDir": "./dist",
-    "baseUrl": "./src",
+    "baseUrl": "./",
     "incremental": true,
   },
   "exclude": [
