:bear: Adding helmet and csurf security middleware

--- a/package.json
+++ b/package.json
@@ -29,7 +29,9 @@
     "@nestjs/platform-fastify": "^6.2.4",
     "@nestjs/swagger": "^3.0.2",
     "@nestjs/typeorm": "^6.1.1",
+    "csurf": "^1.10.0",
     "fastify-swagger": "^2.4.0",
+    "helmet": "^3.18.0",
     "pg": "^7.11.0",
     "reflect-metadata": "^0.1.12",
     "rimraf": "^2.6.2",
