:hammer: Configuration refactor

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "format": "prettier --write \"src/**/*.ts\"",
     "db-start": "docker-compose down && docker-compose up -d",
     "db-stop": "docker-compose down",
-    "start:dev": "ENV=DEV concurrently --handle-input \"wait-on dist/main.js && nodemon\" \"tsc -w -p tsconfig.build.json\" ",
+    "start:dev": "ENV=DEV concurrently --handle-input \"wait-on dist/src/main.js && nodemon\" \"tsc -w -p tsconfig.build.json\" ",
     "start:dev:debug": "ENV=DEV nodemon --config nodemon-debug.json",
     "prestart:prod": "rimraf dist && npm run build",
     "start:prod": "node dist/main.js",
@@ -29,7 +29,6 @@
     "@nestjs/platform-fastify": "^6.2.4",
     "@nestjs/swagger": "^3.0.2",
     "@nestjs/typeorm": "^6.1.1",
-    "csurf": "^1.10.0",
     "fastify-swagger": "^2.4.0",
     "helmet": "^3.18.0",
     "pg": "^7.11.0",
