--- a/package.json
+++ b/package.json
@@ -18,8 +18,8 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json",
-    "test:e2e:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand --config ./test/jest-e2e.json"
+    "test:integration": "ENV=TEST jest --config ./integration-tests/jest-integration.json",
+    "test:integration:debug": "ENV=TEST node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand --config ./integration-tests/jest-integration.json"
   },
   "dependencies": {
     "@hapi/joi": "^15.0.3",
