--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,11 +5,26 @@ services:
     container_name: redis-dev
     ports:
       - '7379:6379'
+  redis-test:
+    image: redis
+    container_name: redis-test
+    ports:
+      - '7380:6379'
   postgres:
     image: postgres:9.6
     container_name: postgres-dev
+    volumes:
+      - ./.postgres-data:/var/lib/postgresql/data
     ports:
       - '5432:5432'
     environment:
       - POSTGRES_USER=postgres
       - POSTGRES_DB=db
+  postgres-test:
+    image: postgres:9.6
+    container_name: postgres-test
+    ports:
+      - '5433:5432'
+    environment:
+      - POSTGRES_USER=postgres
+      - POSTGRES_DB=db_test
