--- a/package.json
+++ b/package.json
@@ -28,15 +28,14 @@
     "@nestjs/common": "^6.2.4",
     "@nestjs/core": "^6.0.0",
     "@nestjs/microservices": "^6.2.4",
-    "@nestjs/passport": "^6.1.0",
     "@nestjs/platform-fastify": "^6.2.4",
     "@nestjs/swagger": "^3.0.2",
     "@nestjs/terminus": "^6.3.0",
     "@nestjs/typeorm": "^6.1.1",
+    "class-transformer": "^0.2.3",
+    "class-validator": "^0.9.1",
     "fastify-swagger": "^2.4.0",
     "helmet": "^3.18.0",
-    "passport": "^0.4.0",
-    "passport-local": "^1.0.0",
     "pg": "^7.11.0",
     "reflect-metadata": "^0.1.12",
     "rimraf": "^2.6.2",
