--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,7 +12,7 @@
     "noUnusedParameters": true,
     "importHelpers": true,
     "noEmitHelpers": true,
-    "lib": ["es6", "es2017"],
+    "lib": ["es6", "dom", "es2017"],
     "target": "es6",
     "sourceMap": true,
     "outDir": "./dist",
